Revert "Move some files to the assets folder"
This reverts commit 1da0de91bfbe02e559e959d89f00090fe0b01ec8.

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -8,6 +8,6 @@ format:
     revealjs:
         slide-number: true
         preview-links: auto
-        css: assets/styles.css
+        css: styles.css
         html-math-method: mathjax
 
